--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,19 @@
     src: url('../Fonts/EBGaramond-VariableFont_wght.ttf') format('truetype');
  }
 
+/* Body Element*/
+body {
+	background: #E0E0E0;
+	margin: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
 /* ??? */
 .liam {
 	text-align: center;
@@ -16,7 +29,6 @@
 	overflow: hidden;
 	position: sticky;
 	top: 0;
-	border-radius: 20px;
 }
 
 /* Style the links inside the navigation bar */
@@ -42,11 +54,26 @@
 	color: white;
 }
 
+/* Footer*/
+footer ul {
+	list-style: none;
+	padding: 0;
+    margin: 0;
+	display: inline-block;
+}
+
+footer {
+	background-color: #282A35;
+	color: white;
+	text-align: center;
+	clear: both;
+}
+
+
 /* Logo*/
 .mslogo {
 	font-family: 'EBGaramond';
 	background: #04AA6D;
-	border-radius: 20px;
 }
 
 /* Character Image*/
@@ -122,7 +149,8 @@
 	border-radius: 30px;
 	padding-left: 20px;
 	width: 80%;
-	margin-left: 10%
+	margin-left: 10%;
+	margin-bottom: 10px;
 }
 
 /* Fona Chart*/
